deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE_TO_BE_REPLACED
  labels: 
    ttl: TTL_TO_BE_REPLACED
  annotations:
    splunk.com/index: eks_logs_gpc_ndsp_nonprod
